{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 233,
  "lineage": "bd654f1e-e68a-1820-0810-e2b274a53dba",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "guacd_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:712090988422:instance/i-0a0f81aa6264fffbf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0f81aa6264fffbf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "krishna95-Nvirginia-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e1cd7512a0536ccc",
            "private_dns": "ip-10-10-2-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a0ee40b1459c1bd9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea1ac9f99a152459",
            "tags": {
              "Name": "rdp-Dev-guacd-server",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "rdp-Dev-guacd-server",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09dc754bf82688357"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.ubuntu_sg",
            "module.compute.aws_security_group.winec2_sg",
            "module.compute.data.aws_ami.ubuntu_2204",
            "module.compute.data.aws_key_pair.keypair",
            "module.networking.aws_subnet.private_subnet1",
            "module.networking.aws_subnet.private_subnet2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d55684c16ece2a5",
            "arn": "arn:aws:ec2:us-east-1:712090988422:instance/i-0f5c9d16ea0a0e35a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5c9d16ea0a0e35a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "krishna95-Nvirginia-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd72f46b1bb13a25",
            "private_dns": "ip-10-10-1-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.81",
            "public_dns": "ec2-44-210-143-228.compute-1.amazonaws.com",
            "public_ip": "44.210.143.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bcd9f6c06c25185b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017be50255ceaa63f",
            "tags": {
              "Name": "rdp-Dev-bastion-server",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "rdp-Dev-bastion-server",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5ff61314031107b"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.winec2_sg",
            "module.compute.data.aws_ami.windows_2019",
            "module.compute.data.aws_key_pair.keypair",
            "module.networking.aws_subnet.public_subnet1",
            "module.networking.aws_subnet.public_subnet2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ubuntu_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:security-group/sg-09dc754bf82688357",
            "description": "Allow SSH, HTTP, 8080 access from rdp-Dev-windwos-server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09dc754bf82688357",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Guacamole access at 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5ff61314031107b"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5ff61314031107b"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from rdp-Dev-windwos-server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5ff61314031107b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rdp-Dev-ubuntu_sg",
            "name_prefix": "",
            "owner_id": "712090988422",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rdp-Dev-ubuntu_sg"
            },
            "tags_all": {
              "Name": "rdp-Dev-ubuntu_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01af338790a894512"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_security_group.winec2_sg",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "winec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:security-group/sg-0a5ff61314031107b",
            "description": "Allow RDP access to the instance from any ip",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5ff61314031107b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "rdp-Dev-winec2_sg",
            "name_prefix": "",
            "owner_id": "712090988422",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rdp-Dev-winec2_sg"
            },
            "tags_all": {
              "Name": "rdp-Dev-winec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01af338790a894512"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:712090988422:loadbalancer/app/rdp-Dev-alb/562d6396c4a3321f",
            "arn_suffix": "app/rdp-Dev-alb/562d6396c4a3321f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "rdp-Dev-alb-1998379824.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:712090988422:loadbalancer/app/rdp-Dev-alb/562d6396c4a3321f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rdp-Dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cbc74f9b91dcd0b2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017be50255ceaa63f"
              },
              {
                "subnet_id": "subnet-08f6e8cd284471207"
              }
            ],
            "subnets": [
              "subnet-017be50255ceaa63f",
              "subnet-08f6e8cd284471207"
            ],
            "vpc_id": "vpc-01af338790a894512",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.loadbalancing.aws_security_group.alb_sg",
            "module.networking.aws_subnet.public_subnet1",
            "module.networking.aws_subnet.public_subnet2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:712090988422:listener/app/rdp-Dev-alb/562d6396c4a3321f/5897d8872e138dcd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:712090988422:targetgroup/rdp-Dev-alb-tg/15aab5ee8ce72596",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:712090988422:listener/app/rdp-Dev-alb/562d6396c4a3321f/5897d8872e138dcd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:712090988422:loadbalancer/app/rdp-Dev-alb/562d6396c4a3321f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancing.aws_alb.alb",
            "module.loadbalancing.aws_alb_target_group.alb_tg",
            "module.loadbalancing.aws_security_group.alb_sg",
            "module.networking.aws_subnet.public_subnet1",
            "module.networking.aws_subnet.public_subnet2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:712090988422:targetgroup/rdp-Dev-alb-tg/15aab5ee8ce72596",
            "arn_suffix": "targetgroup/rdp-Dev-alb-tg/15aab5ee8ce72596",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:712090988422:targetgroup/rdp-Dev-alb-tg/15aab5ee8ce72596",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "rdp-Dev-alb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01af338790a894512"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:712090988422:targetgroup/rdp-Dev-alb-tg/15aab5ee8ce72596-20221226193647584600000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:712090988422:targetgroup/rdp-Dev-alb-tg/15aab5ee8ce72596",
            "target_id": "i-0a0f81aa6264fffbf"
          },
          "dependencies": [
            "module.compute.aws_instance.guacd_server",
            "module.compute.aws_security_group.ubuntu_sg",
            "module.compute.aws_security_group.winec2_sg",
            "module.compute.data.aws_ami.ubuntu_2204",
            "module.compute.data.aws_key_pair.keypair",
            "module.loadbalancing.aws_alb_target_group.alb_tg",
            "module.networking.aws_subnet.private_subnet1",
            "module.networking.aws_subnet.private_subnet2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:security-group/sg-0cbc74f9b91dcd0b2",
            "description": "Allow http protocol from any ipv4 address",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbc74f9b91dcd0b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rdp-Dev-alb-sg",
            "name_prefix": "",
            "owner_id": "712090988422",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rdp-Dev-alb_sg"
            },
            "tags_all": {
              "Name": "rdp-Dev-alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01af338790a894512"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ubuntu_sg_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2452947274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09dc754bf82688357",
            "security_group_rule_id": "sgr-0e7b1895a20d01834",
            "self": false,
            "source_security_group_id": "sg-0cbc74f9b91dcd0b2",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_security_group.ubuntu_sg",
            "module.compute.aws_security_group.winec2_sg",
            "module.loadbalancing.aws_security_group.alb_sg",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccd1b72d6041d936",
            "association_id": "eipassoc-08799e05794c4ec4b",
            "domain": "vpc",
            "id": "eipalloc-0ccd1b72d6041d936",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d89b345fcc017f56",
            "private_dns": "ip-10-10-0-126.ec2.internal",
            "private_ip": "10.10.0.126",
            "public_dns": "ec2-75-101-137-4.compute-1.amazonaws.com",
            "public_ip": "75.101.137.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "rdp-Dev-nat-gw"
            },
            "tags_all": {
              "Name": "rdp-Dev-nat-gw"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:internet-gateway/igw-02dd4eb9658b28b45",
            "id": "igw-02dd4eb9658b28b45",
            "owner_id": "712090988422",
            "tags": {
              "Name": "rdp-Dev-igw",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "rdp-Dev-igw",
              "terraform": "true"
            },
            "vpc_id": "vpc-01af338790a894512"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccd1b72d6041d936",
            "connectivity_type": "public",
            "id": "nat-001d9c38a8616069a",
            "network_interface_id": "eni-0d89b345fcc017f56",
            "private_ip": "10.10.0.126",
            "public_ip": "75.101.137.4",
            "subnet_id": "subnet-08f6e8cd284471207",
            "tags": {
              "Name": "rdp-Dev-nat-gw"
            },
            "tags_all": {
              "Name": "rdp-Dev-nat-gw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.natEIP",
            "module.networking.aws_subnet.public_subnet1",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:route-table/rtb-0b5394d89e47c9fc4",
            "id": "rtb-0b5394d89e47c9fc4",
            "owner_id": "712090988422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-001d9c38a8616069a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rdp-Dev-private-rtb"
            },
            "tags_all": {
              "Name": "rdp-Dev-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01af338790a894512"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.natEIP",
            "module.networking.aws_nat_gateway.NATgw",
            "module.networking.aws_subnet.public_subnet1",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:route-table/rtb-0d75ad2704a5c6ef4",
            "id": "rtb-0d75ad2704a5c6ef4",
            "owner_id": "712090988422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02dd4eb9658b28b45",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rdp-Dev-public-rtb"
            },
            "tags_all": {
              "Name": "rdp-Dev-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01af338790a894512"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095495d6ccf4549b4",
            "route_table_id": "rtb-0b5394d89e47c9fc4",
            "subnet_id": "subnet-0ea1ac9f99a152459"
          },
          "dependencies": [
            "module.networking.aws_eip.natEIP",
            "module.networking.aws_nat_gateway.NATgw",
            "module.networking.aws_route_table.private_rtb",
            "module.networking.aws_subnet.private_subnet1",
            "module.networking.aws_subnet.public_subnet1",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f57ae4b5c769778c",
            "route_table_id": "rtb-0b5394d89e47c9fc4",
            "subnet_id": "subnet-0624dd3df9c0dc71b"
          },
          "dependencies": [
            "module.networking.aws_eip.natEIP",
            "module.networking.aws_nat_gateway.NATgw",
            "module.networking.aws_route_table.private_rtb",
            "module.networking.aws_subnet.private_subnet2",
            "module.networking.aws_subnet.public_subnet1",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cd3b6ad56d92fca",
            "route_table_id": "rtb-0d75ad2704a5c6ef4",
            "subnet_id": "subnet-08f6e8cd284471207"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_rtb",
            "module.networking.aws_subnet.public_subnet1",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005676feff1bb9e62",
            "route_table_id": "rtb-0d75ad2704a5c6ef4",
            "subnet_id": "subnet-017be50255ceaa63f"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_rtb",
            "module.networking.aws_subnet.public_subnet2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:subnet/subnet-0ea1ac9f99a152459",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea1ac9f99a152459",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712090988422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rdp-Dev-pvt-sub1"
            },
            "tags_all": {
              "Name": "rdp-Dev-pvt-sub1"
            },
            "vpc_id": "vpc-01af338790a894512"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:subnet/subnet-0624dd3df9c0dc71b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0624dd3df9c0dc71b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712090988422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rdp-Dev-pvt-sub2"
            },
            "tags_all": {
              "Name": "rdp-Dev-pvt-sub2"
            },
            "vpc_id": "vpc-01af338790a894512"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:subnet/subnet-08f6e8cd284471207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f6e8cd284471207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "712090988422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rdp-Dev-pub-sub1"
            },
            "tags_all": {
              "Name": "rdp-Dev-pub-sub1"
            },
            "vpc_id": "vpc-01af338790a894512"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:subnet/subnet-017be50255ceaa63f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017be50255ceaa63f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "712090988422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rdp-Dev-pub-sub2"
            },
            "tags_all": {
              "Name": "rdp-Dev-pub-sub2"
            },
            "vpc_id": "vpc-01af338790a894512"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712090988422:vpc/vpc-01af338790a894512",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/18",
            "default_network_acl_id": "acl-021b7edfae7e67c6d",
            "default_route_table_id": "rtb-0277e5255f6afcdf5",
            "default_security_group_id": "sg-06d64910555cc4cbf",
            "dhcp_options_id": "dopt-0d1122b77db932420",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01af338790a894512",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0277e5255f6afcdf5",
            "owner_id": "712090988422",
            "tags": {
              "Name": "rdp-Dev-vpc",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "rdp-Dev-vpc",
              "terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}